[gd_scene load_steps=11 format=3 uid="uid://ru5yvdslo2xo"]

[ext_resource type="Script" uid="uid://coeii8m8m25tb" path="res://fish.gd" id="1_6ik3a"]
[ext_resource type="PackedScene" uid="uid://2rbhi4ba71fi" path="res://coin.tscn" id="2_oovoc"]
[ext_resource type="Resource" uid="uid://dva0mhhqhl50v" path="res://resources/fish_data/fish_1.tres" id="3_oovoc"]
[ext_resource type="Texture2D" uid="uid://byl5nwd3phoru" path="res://art/error.png" id="4_oovoc"]
[ext_resource type="Texture2D" uid="uid://crcntkw6njhbv" path="res://art/progress_bar_1.png" id="5_8vtik"]

[sub_resource type="SpriteFrames" id="SpriteFrames_10mov"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_oovoc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yfqcd"]
radius = 9.0
height = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oovoc"]
radius = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_10mov"]
atlas = ExtResource("5_8vtik")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn1kp"]
atlas = ExtResource("5_8vtik")
region = Rect2(0, 8, 8, 8)

[node name="Fish" type="CharacterBody2D" unique_id=1222689378]
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_6ik3a")
reward_scene = ExtResource("2_oovoc")
fish_data = ExtResource("3_oovoc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=2039082227]
sprite_frames = SubResource("SpriteFrames_10mov")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=879494474]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_yfqcd")

[node name="GrabArea2D" type="Area2D" parent="." unique_id=918671456]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea2D" unique_id=1063526544]
shape = SubResource("CircleShape2D_oovoc")

[node name="DropTimer" type="Timer" parent="." unique_id=233260613]

[node name="DropPoint" type="Node2D" parent="." unique_id=1358528152]
position = Vector2(0, 12)

[node name="GrowthTimer" type="Timer" parent="." unique_id=258316347]
one_shot = true

[node name="GrowthProgressBar" type="TextureProgressBar" parent="." unique_id=1761801849]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -4.0
offset_top = -16.0
offset_right = 4.0
offset_bottom = -8.0
grow_horizontal = 2
max_value = 1.0
step = 0.0
fill_mode = 4
texture_under = SubResource("AtlasTexture_10mov")
texture_progress = SubResource("AtlasTexture_xn1kp")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="input_event" from="GrabArea2D" to="." method="_on_grab_area_2d_input_event"]
[connection signal="timeout" from="DropTimer" to="." method="_on_drop_timer_timeout"]
[connection signal="timeout" from="GrowthTimer" to="." method="_on_growth_timer_timeout"]
